Enhance StreamDemo class with additional stream operations and examples; add UsingSumFormula class for missing number calculation; update withoutTempArray.java with detailed rotation logic.